--- a/src/QRCodeReader.Api/Properties/launchSettings.json
+++ b/src/QRCodeReader.Api/Properties/launchSettings.json
@@ -1,10 +1,17 @@
 {
-  "QRCodeReader.Api": {
-    "commandName": "Project",
-    "launchBrowser": true,
-    "environmentVariables": {
-      "ASPNETCORE_ENVIRONMENT": "Development"
+  "profiles": {
+    "QRCodeReader.Api": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
-    "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
+    }
   }
 }
