--- a/src/QRCodeReader.Api/appsettings.json
+++ b/src/QRCodeReader.Api/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "QRCodeReader_Database": "data source=TS1734\\SQLEXPRESS;Initial Catalog=QR;Integrated Security=SSPI;persist security info=True;"
+    "QRCodeReader_Database": "data source=[YOUR_DB];Initial Catalog=QR;Integrated Security=SSPI;persist security info=True;"
   },
   "QR": {
     "Api": "http://api.qrserver.com/v1"
